<resources>
    <string name="app_name">Football - Teams Quiz!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kullanici_adi_belirle">Set a Username</string>
    <string name="answer">answer</string>
    <string name="e_mail">E-mail</string>
    <string name="sifre">Password</string>
    <string name="IForgotMyPassword">I Forgot My Password</string>
    <string name="giris_yap">Log In</string>
    <string name="uye_degil_misin_uye_ol">Not a member? Sign Up!</string>
    <string name="siralama">Ranking</string>
    <string name="ad_ve_soyad">First Name and Last Name</string>
    <string name="kullanici_adi">Username</string>
    <string name="kayit_ol">Sign Up</string>
    <string name="zaten_ye_misiniz_giri_yap">Already a member? Log In!</string>
    <string name="siralamayi_gor">View Rankings</string>
    <string name="basla">Start</string>
    <string name="en_yuksek_skorum">Highest Score: </string>
    <string name="skor">Skor</string>
    <string name="FindtheFlagbyCountryName">Find the Flag by Country Name</string>
    <string name="Findthecountrybytheflag">Find the country by the flag</string>
    <string name="FindtheCapitaloftheCountry">Find the Capital of the Country</string>
    <string name="FindthePopulationoftheCountry">Find the Population of the Country</string>
    <string name="FindtheCountrybyGeographicLocation">Find the Country by Geographic Location</string>
    <string name="FindtheContinentoftheCountry">Find the Continent of the Country</string>
    <string name="time">Remaining Time: </string>
    <string name="oyun_bitti">Game Over !</string>
    <string name="skorunuz">Your Score: </string>
    <string name="tamam">OK</string>
    <string name="enteryouremail">Enter your email</string>
    <string name="enteryouremailandpassword">Enter your email and password</string>
    <string name="sharetheApp">Share the App</string>
    <string name="logOut">Log Out</string>
    <string name="share_app_text">I recommend trying this amazing app! Play Store link: </string>
    <string name="usernamealreadyexists">Username already exists</string>
    <string name="pleasefilloutallfieldscompletely">Please fill out all fields completely.</string>
    <string name="Almanya">Germany</string>
    <string name="UnitedStatesofAmerica">United States of America</string>
    <string name="Arnavutluk">Albania</string>
    <string name="Arjantin">Argentina</string>
    <string name="Avustralya">Australia</string>
    <string name="Avusturya">Austria</string>
    <string name="Azerbaycan">Azerbaijan</string>
    <string name="Bahamalar">Bahamas</string>
    <string name="Bahreyn">Bahrain</string>
    <string name="Banglades">Bangladesh</string>
    <string name="Belcika">Belgium</string>
    <string name="bae">United Arab Emirates</string>
    <string name="Bolivia">Bolivia</string>
    <string name="UnitedKingdom">United Kingdom</string>
    <string name="BosnaHersek">Bosnia and Herzegovina</string>
    <string name="Brezilya">Brazil</string>
    <string name="Bulgaristan">Bulgaria</string>
    <string name="Cezayir">Algeria</string>
    <string name="Cekya">Czechia</string>
    <string name="Cin">China</string>
    <string name="Danimarka">Denmark</string>
    <string name="EastTimor">East Timor</string>
    <string name="DominikCumhuriyeti">Dominican Republic</string>
    <string name="Ekvador">Ecuador</string>
    <string name="EkvatorGinesi">Equatorial Guinea</string>
    <string name="Endonezya">Indonesia</string>
    <string name="Eritre">Eritrea</string>
    <string name="Ermenistan">Armenia</string>
    <string name="Estonya">Estonia</string>
    <string name="Etiyopya">Ethiopia</string>
    <string name="Fas">Morocco</string>
    <string name="FildisiSahili">"Côte d'Ivoire"</string>
    <string name="Filipinler">Philippines</string>
    <string name="Filistin">Palestine</string>
    <string name="Finlandiya">Finland</string>
    <string name="Fransa">France</string>
    <string name="Gambiya">Gambia</string>
    <string name="Gana">Ghana</string>
    <string name="Gine">Guinea</string>
    <string name="GineBissau">Guinea-Bissau</string>
    <string name="GuneyAfrika">South Africa</string>
    <string name="GuneyKore">South Korea</string>
    <string name="GuneySudan">South Sudan</string>
    <string name="Gurcistan">Georgia</string>
    <string name="Hirvatistan">Croatia</string>
    <string name="Hindistan">India</string>
    <string name="Hollanda">Netherlands</string>
    <string name="Irak">Iraq</string>
    <string name="Iran">Iran</string>
    <string name="Irlanda">Ireland</string>
    <string name="Ispanya">Spain</string>
    <string name="Israil">Israel</string>
    <string name="Isvec">Sweden</string>
    <string name="Isvicre">Switzerland</string>
    <string name="Italya">Italy</string>
    <string name="Izlanda">Iceland</string>
    <string name="Jamaika">Jamaica</string>
    <string name="Japonya">Japan</string>
    <string name="Kambocya">Cambodia</string>
    <string name="Kamerun">Cameroon</string>
    <string name="Kanada">Canada</string>
    <string name="Karadag">Montenegro</string>
    <string name="Katar">Qatar</string>
    <string name="Kazakistan">Kazakhstan</string>
    <string name="Kibris">Cyprus</string>
    <string name="Kirgizistan">Kyrgyzstan</string>
    <string name="Kolombiya">Colombia</string>
    <string name="Komorlar">Comoros</string>
    <string name="Kongo">Congo</string>
    <string name="KongoDemokratikCumhuriyeti">Democratic Republic of the Congo</string>
    <string name="KostaRika">Costa Rica</string>
    <string name="Kosova">Kosovo</string>
    <string name="Kuveyt">Kuwait</string>
    <string name="kktc">Turkish Republic of Northern Cyprus</string>
    <string name="KuzeyKore">North Korea</string>
    <string name="KuzeyMakedonya">North Macedonia</string>
    <string name="Kuba">Cuba</string>
    <string name="Letonya">Latvia</string>
    <string name="Liberya">Liberia</string>
    <string name="Lihtenstayn">Liechtenstein</string>
    <string name="Litvanya">Lithuania</string>
    <string name="Lubnan">Lebanon</string>
    <string name="Luksemburg">Luxembourg</string>
    <string name="Macaristan">Hungary</string>
    <string name="Madagaskar">Madagascar</string>
    <string name="Maldivler">Maldives</string>
    <string name="Malezya">Malaysia</string>
    <string name="Meksika">Mexico</string>
    <string name="Mikronezya">Micronesia</string>
    <string name="Misir">Egypt</string>
    <string name="Mogolistan">Mongolia</string>
    <string name="Monako">Monaco</string>
    <string name="Moritanya">Mauritania</string>
    <string name="Mozambik">Mozambique</string>
    <string name="Namibya">Namibia</string>
    <string name="Nijer">Niger</string>
    <string name="Nijerya">Nigeria</string>
    <string name="Nikaragua">Nicaragua</string>
    <string name="Norvec">Norway</string>
    <string name="OrtaAfrikaCumhuriyeti">Central African Republic</string>
    <string name="Ozbekistan">Uzbekistan</string>
    <string name="PapuaYeniGine">Papua New Guinea</string>
    <string name="Polonya">Poland</string>
    <string name="Portekiz">Portugal</string>
    <string name="Romanya">Romania</string>
    <string name="Ruanda">Rwanda</string>
    <string name="Rusya">Russia</string>
    <string name="SahraDemokratikArapCumhuriyeti">Sahrawi Arab Democratic Republic</string>
    <string name="Sirbistan">Serbia</string>
    <string name="Seyseller">Seychelles</string>
    <string name="Singapur">Singapore</string>
    <string name="Slovakya">Slovakia</string>
    <string name="Slovenya">Slovenia</string>
    <string name="SolomonAdalari">Solomon Islands</string>
    <string name="Somali">Somalia</string>
    <string name="Surinam">Suriname</string>
    <string name="Suriye">Syria</string>
    <string name="SuudiArabistan">Saudi Arabia</string>
    <string name="Sili">Chile</string>
    <string name="Tacikistan">Tajikistan</string>
    <string name="Tanzanya">Tanzania</string>
    <string name="Tayland">Thailand</string>
    <string name="Tayvan">Taiwan</string>
    <string name="TrinidadveTobago">Trinidad and Tobago</string>
    <string name="Tunus">Tunisia</string>
    <string name="Turkiye">Türkiye</string>
    <string name="Ukrayna">Ukraine</string>
    <string name="Umman">Oman</string>
    <string name="Urdun">Jordan</string>
    <string name="Vatikan">Vatican</string>
    <string name="YesilBurunAdalari">Cabo Verde</string>
    <string name="YeniZelanda">New Zealand</string>
    <string name="Yunanistan">Greece</string>
    <string name="Zambiya">Zambia</string>
    <string name="Cad">Chad</string>
    <string name="PortoRiko">Puerto Rico</string>
    <string name="Cibuti">Djibouti</string>
    <string name="Cebelitarik">Gibraltar</string>
    <string name="ManAdasi">Isle of Man</string>
    <string name="Gronland">Greenland</string>
    <string name="CookAdalari">Cook Islands</string>
    <string name="FaroeAdalari">Faroe Islands</string>
    <string name="Game1Text">Match the flag with the name. Five seconds per question. Four options between the flags.</string>
    <string name="Game7Text">Countries are shown on the map; find the displayed country.</string>
    <string name="Game2Text">Find the country name from the flags. Five seconds per question. Four options among the countries.</string>
    <string name="Game3Text">Learn the country capitals. Ten seconds per question. Four options among the countries.</string>
    <string name="Game4Text">Guess the populations of the countries. Ten seconds per question. Two options among the countries.</string>
    <string name="Game6Title">Guess in One Minute (Find the Flag by Country Name)</string>
    <string name="Game6Text">Match the flag with the name. Answer as many questions as possible in one minute.</string>
    <string name="Game8Title">Find the Continent of the Country</string>
    <string name="Game8Text">Correctly guess the continent of the countries. Five seconds per question. Four options among the continents.</string>
    <string name="tema">Change the Theme</string>

</resources>